--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <h1><li><font face="UD デジタル 教科書体 N-B">HELLo,WORLD</font></li></h1>
   <p>はじめまして、よく技術的にＨＴＭＬやＣＳＳを書いている中学一年生のＫＥＮ氏です。
   　　<p>ここからＨＴＭＬブログで日々投稿していきますのでよろしくお願いします。</p>
+    
+  <h1><li><font face="UD デジタル 教科書体 N-B">何故ブログを始めたのか</font></li></h1>
+  <p>今回、なんでブログをはじめたのかそれについて今回話をしたいと思います。
+  <p>まぁブログをはじめたのかそれは、普通にやってみたからです。
+  <p>僕は、今年から中学1年生に成ります。なのでどうせならブログを
+  <p>昔からやっていたHTMLとGITHUBで公開してみようかと思いブログを
+  <p>初めてみました。
+  <p>今回はこんな感じです。</p>
   　　
   </body>
 </html>
