--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   <p>昔からやっていたHTMLとGITHUBで公開してみようかと思いブログを
   <p>初めてみました。
   <p>今回はこんな感じです。</p>
+  
+  <h1><li><font face="UD デジタル 教科書体 N-B">今からの予定</font></li></h1>
+  <h2>2022,03,28最新</h2>
+  <p>今回、ブログのネタが尽きるので適当にしてみよう。
+  <p>今日の今からの予定それは歯医者です。</p>
   　　
   </body>
 </html>
